@@ -8,6 +8,8 @@ Version 1.5.8+svn:
  * User interface:
    * Hide the "Network Player" option for Local MP Games (bug #12596).
    * Potraits with an icon are TC'ed again.
+ * WML Engine:
+   * Prevent duplicate id conflicts when cloning units with WML (bug #12894)
 
 Version 1.5.8:
  * Campaigns:
